# AutoJudger

./: .gitignore  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
autojudger/: __init__.py  api.py  calibrate.py  config.py  data.py  exam.py  judge.py  utils.py
config/: default.yaml
examples/: config_pairwise.yaml  tasks_pairwise.jsonl
tests/: live_api_check.py  test_calibrate.py  test_exam.py  test_integration.py
