[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autojudger"
version = "0.1.0"
description = "Unified LLM-as-judge toolkit (peer review + auto qualification + bias calibration)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Qingyao Ai", email = "aiqingyao@gmail.com" }]
keywords = ["llm", "evaluation", "llm-as-judge", "peer-review", "calibration"]
dependencies = [
    "openai>=1.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Reserved for future estimators; the core calibrator uses numpy only.
calibrate = ["scikit-learn>=1.3", "scipy>=1.10"]
dev = ["pytest>=7.0"]

[project.scripts]
autojudger = "main:main"

[tool.setuptools]
packages = ["autojudger"]
py-modules = ["main"]
